--- a/vignettes/odin2.Rmd
+++ b/vignettes/odin2.Rmd
@@ -75,7 +75,7 @@ This step generates C++ code for the model and compiles it; it will take a few s
 Once we have our system, we can pass it to [`dust2::dust_system_create`] to create start simulating it.  Our system above has defaults for its parameters (`N`, `beta`, `gamma`, and `I0`) so we can initialise with almost no arguments:
 
 ```{r}
-pars <- list(beta = 0.2, gamma = 0.1, I0 = 10)
+pars <- list(beta = 0.2, gamma = 0.1, I0 = 10, N = 1000)
 sys <- dust2::dust_system_create(gen(), pars, n_particles = 10)
 ```
 
@@ -83,9 +83,10 @@ By default the system will start at time `0` and with `dt = 1`.  We can simulate
 
 ```{r}
 dust2::dust_system_set_state_initial(sys)
-time <- 0:75
+time <- 0:100
 y <- dust2::dust_system_simulate(sys, time)
-matplot(time, t(y), col = "#00000055", lty = 1, type = "l")
+matplot(time, t(y[2, , ]), col = "#00000055", lty = 1, type = "l",
+        xlab = "Time", ylab = "Number of infecteds")
 ```
 
 as this system is stochastic, each trajectory will be different.
