--- a/vignettes/fitting.Rmd
+++ b/vignettes/fitting.Rmd
@@ -51,7 +51,7 @@ sir <- odin2::odin({
   gamma <- parameter()
   I0 <- parameter()
   N <- 1000
-}, debug = TRUE)
+})
 ```
 
 We can initialise this system and simulate it out over this time series and plot the results against the data:
@@ -108,7 +108,7 @@ sir <- odin2::odin({
   # Comparison to data
   cases <- data()
   compare(cases) ~ Poisson(incidence)
-}, debug = TRUE)
+})
 ```
 
 These last two lines are the new addition to the odin code.  The first says that `cases` will be found in the data.  The second restates our aim from the previous paragraph, comparing the observed `cases` against modelled `incidence`.  The syntax here is designed to echo that of the [`mcstate2` DSL](https://mrc-ide.github.io/mcstate2/articles/dsl.html), though (at least for now) we use `compare()` on the left side to make this clearer.
@@ -203,6 +203,7 @@ There are several things we can do here to improve how this chain mixes
 * We can increase the number of threads (effectively CPU cores) that we are using while computing the likelihood.  This will scale fairly efficiently through to at least 10 cores, with the likelihood calculations being almost [embarassingly parallel](https://en.wikipedia.org/wiki/Embarrassingly_parallel).  This will help to offset some of the costs incurred above.
 * We can run multiple chains at once.  We don't yet have a good parallel runner implemented in `mcstate2` but it is coming soon.  This will reduce wall time (because each chain runs at the same time) and also allows us to compute covergence diagnostics which will reveal how well (or badly) we are doing.
 * We can try and find a better proposal kernel.
+* We can try a deterministic model (see below) to get a sense of the general region of high probability space.
 
 # Deterministic models from stochastic
 
@@ -214,3 +215,98 @@ Another way of fitting this model is to simply throw away the stochasticity.  In
 ```
 
 which are the stochastic portion of the model.  Each time step we compute the number of individuals who make the transition from `S` to `I` and from `I` to `R` by sampling from the binomial distribution.  We can replace these calls by their expectations (so effecively making `n_SI = S * p_SI`) by running the model in "deterministic" mode.
+
+This simplification of the stochastic model can be seen as taking expectations of the underlying random process, but there's no reason to expect that this represents the mean of the whole model ($E[f(x)] \neq f(E[x])$, at least generally).
+
+We have found these simplifications useful:
+
+* They are not stochastic, so you can use adaptive MCMC or other more efficient algorithms
+* They are orders of magnitude faster, because instead of running 100s or thousands of particles per likelihood evaluation you just run one
+* The region of high probability density of the deterministic model is often within the (broader) region of high probability density of the stochastic model, so you can use these models to create reasonable starting parameter values for your chains
+* The signs and relative magnitudes of the covariances among parameters are often similar between the deterministic and stochastic model, so you can use the deterministic model to estimate a variance-covariance matrix for your stochastic model -- though you will need to increase all quantities in it
+
+Obviously, this approximation comes with costs though:
+
+* You no longer have integer valued quantities from the expectations of samples in your discrete distributions, so you have to think about fractional individuals
+* The model can no account for stochastic effects, e.g., at low population sizes.  This can make the model overly rigid, and it may poorly account for observed patterns
+* The fixed `dt` approach is a [first order Euler solver](https://en.wikipedia.org/wiki/Euler_method) which offers few stability guarantees, and this will differ from an system of ODEs solved with a better ODE solver
+
+To create a deterministic "filter" (currently, and temporarily called an "unfilter"), use `dust_unfilter_create()` in place of `dust_filter_create`.  This will replace all calls to stochastic functions with their expectations at the point of call.
+
+```{r}
+unfilter <- dust2::dust_unfilter_create(sir(), 0, data)
+```
+
+In contrast with `filter`, above, multiple calls to `unfilter` with the same parameter set yield the same result.
+
+```{r}
+dust2::dust_unfilter_run(unfilter, pars)
+dust2::dust_unfilter_run(unfilter, pars)
+```
+
+We can now proceed as before, reusing our `packer`, `prior` and `sampler` objects, which are still useable here:
+
+```{r}
+likelihood_det <- dust2::dust_filter_mcstate(unfilter, sir_packer)
+posterior_det <- prior + likelihood_det
+samples <- mcstate2::mcstate_sample(posterior, sampler, 100)
+```
+
+However, now that we have a deterministic function we can do much better than a random walk, and we can use an adaptive sampler:
+
+```{r}
+sampler_adaptive <- mcstate2::mcstate_sampler_adaptive(diag(2) * 0.02)
+samples <- mcstate2::mcstate_sample(posterior, sampler, 100)
+```
+
+# Differentiable models
+
+We can go a step further than simply turning off stochasticity to create a deterministic model; now that we've got a deterministic likelihood function we can also differentiate that likelihood with respect to (some of) the parameters.
+
+```{r}
+sir <- odin2::odin({
+  initial(S) <- N - I0
+  initial(I) <- I0
+  initial(R) <- 0
+  initial(incidence) <- 0
+  update(S) <- S - n_SI
+  update(I) <- I + n_SI - n_IR
+  update(R) <- R + n_IR
+  update(incidence) <- if (time %% 1 == 0) n_SI else incidence + n_SI
+  n_SI <- Binomial(S, p_SI)
+  n_IR <- Binomial(I, p_IR)
+  p_SI <- 1 - exp(-beta * I / N * dt)
+  p_IR <- 1 - exp(-gamma * dt)
+  beta <- parameter(differentiate = TRUE)
+  gamma <- parameter(differentiate = TRUE)
+  I0 <- parameter()
+  N <- 1000
+
+  # Comparison to data
+  cases <- data()
+  compare(cases) ~ Poisson(incidence)
+})
+```
+
+This the same model as above, except for the definition of `beta` and `gamma`, which now contain the argument `derivative = TRUE`.
+
+This sytem can be used as a stochastic model (created via `dust2::dust_filter_create`) just as before.  The only difference is where the model is created using `dust2::dust_unfilter_create()`.
+
+```{r}
+unfilter <- dust2::dust_unfilter_create(sir(), 0, data)
+```
+
+When you run the unfilter, you can now provide the argument `adjoint = TRUE` which will enable use of `dust_unfilter_last_gradient()` (we may make this the default in future).
+
+```{r}
+dust2::dust_unfilter_run(unfilter, adjoint = TRUE)
+dust2::dust_unfilter_last_gradient(unfilter)
+```
+
+With a model configured this way, you can use the [Hamiltonian Monte Carlo](https://en.wikipedia.org/wiki/Hamiltonian_Monte_Carlo) method with `mcstate2::mcstate_sampler_hmc()`, which can be far more efficient than a random walk once tuned.
+
+**WARNING**": Using `derivative = TRUE` on some parameters has the effect of making the rest use `constant = TRUE`.  We will describe the effects of this somewhere...
+
+# Further reading
+
+This vignette can only skim the surface, and is organised around features of odin itself.  The machinery for running the models comes from [`dust2`](https://mrc-ide.github.io/dust2) and for performing inference from [`mcstate2`](https://mrc-ide.github.io/mcstate2) and we will be adding documentation to those packages that covers the details of use.
