--- a/vignettes/errors.Rmd
+++ b/vignettes/errors.Rmd
@@ -330,7 +330,7 @@ It is possible that there is more than one cycle within the reported expressions
 Undefined variable used in an equation.  This error means that you have referenced some variable that does not exist within the odin system.  Common reasons for this error include:
 
 * A spelling mistake: you've referenced a variable that is very similar to the one that you meant to (we may add "did you mean support" in future; let us know if this would have saved you time).
-* Trying to reference variables defined in R's environmnent but not in odin.  This is impossible, but you might want to make a parameter, perhaps.
+* Trying to reference variables defined in R's environment but not in odin.  This is impossible, but you might want to make a parameter, perhaps.
 
 Example:
 
