--- a/vignettes/migrating.Rmd
+++ b/vignettes/migrating.Rmd
@@ -30,7 +30,7 @@ Some of these features were present in versions of `odin.dust` and many derive f
 
 ## Planned
 
-* Optional array bounds checking, both during compilation and during runtime (in the latter case with a performance penalty onced enabled).
+* Optional array bounds checking, both during compilation and during runtime (in the latter case with a performance penalty once enabled).
 
 ## Hoped
 
@@ -133,10 +133,10 @@ If your system has a parameter that affects the number of state variables in the
 
 This package replaces `odin.dust` and will eventually replace `odin` (as in, we'll copy the entire `odin2` code into `odin` to become version 2.0.0 of that package).
 
-The relationship between packages has changed.  Previously `mcstate` "knew" about `dust` models and so you had to use `odin.dust` practically to use the statistical machinery in `mcstate2`.  We've changed this around now, so that `odin2` "knows" about `mcstate2` and can create sytems that will work well with `mcstate2`.  We now depend on `mcstate2`, so if you have `odin2` installed you can start working towards fitting models immediately.
+The relationship between packages has changed.  Previously `mcstate` "knew" about `dust` models and so you had to use `odin.dust` practically to use the statistical machinery in `mcstate2`.  We've changed this around now, so that `odin2` "knows" about `mcstate2` and can create systems that will work well with `mcstate2`.  We now depend on `mcstate2`, so if you have `odin2` installed you can start working towards fitting models immediately.
 
 # Known limitations
 
 ## Much slower compilation time
 
-Because we now compile to C++ via `dust2`, the compilation times have massively increased.  Previously, compilation of a simple model took less than a second, but now this will take 6 seconds or so.  You can allievate this to a degree during development by specifying `debug = TRUE` when compiling, which reduces this down to about 3 seconds.  These times are from my workstation but I expect the relative differences to hold (we're probably 10x slower than previously but can be "only" 5x slower if you turn off optimisation).  If you were previously using `odin.dust` you should notice little change here.
+Because we now compile to C++ via `dust2`, the compilation times have massively increased.  Previously, compilation of a simple model took less than a second, but now this will take 6 seconds or so.  You can alleviate this to a degree during development by specifying `debug = TRUE` when compiling, which reduces this down to about 3 seconds.  These times are from my workstation but I expect the relative differences to hold (we're probably 10x slower than previously but can be "only" 5x slower if you turn off optimisation).  If you were previously using `odin.dust` you should notice little change here.
