--- a/vignettes/fitting.Rmd
+++ b/vignettes/fitting.Rmd
@@ -73,7 +73,7 @@ matplot(time, t(y[4, , ]), type = "l", lty = 1, col = "#00000055",
 points(cases ~ time, data, pch = 19, col = "red")
 ```
 
-The modelled trajectories are in grey, with the overlaid in red -- we're not doing a great job here of capturing the data.
+The modelled trajectories are in grey, with the data points overlaid in red -- we're not doing a great job here of capturing the data.
 # Comparing to data
 
 We're interested in fitting this model to data, and the first thing we need is a measure of goodness of fit, which we can also code into the odin model, but first we'll explain the idea.
@@ -276,7 +276,7 @@ Obviously, this approximation comes with costs though:
 
 * You no longer have integer valued quantities from the expectations of samples in your discrete distributions, so you have to think about fractional individuals
 * The model can no longer account for stochastic effects, e.g., at low population sizes.  This can make the model overly rigid, and it may poorly account for observed patterns
-* The fixed `dt` approach is a [first order Euler solver](https://en.wikipedia.org/wiki/Euler_method) which offers few stability guarantees, and this will differ from an system of ODEs solved with a better ODE solver
+* The fixed `dt` approach is a [first order Euler solver](https://en.wikipedia.org/wiki/Euler_method) which offers few stability guarantees, and this will differ from a system of ODEs solved with a better ODE solver
 
 To create a deterministic "filter" (currently, and temporarily called an "unfilter"), use `dust_unfilter_create()` in place of `dust_filter_create`.  This will replace all calls to stochastic functions with their expectations at the point of call.
 
